[tool.poetry]
name = "liquorsales2022"
version = "0.1.0"
description = ""
authors = ["LyndonFan <lyndon0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
dask = "^2022.9.1"
tqdm = "^4.64.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
